--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "external/gtest"]
 	path = external/gtest
 	url = http://git.chromium.org/external/googletest.git
+[submodule "external/tops"]
+	path = external/tops
+	url = https://github.com/ayoshiaki/tops.git
