--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 	path = external/tops
 	url = https://github.com/ayoshiaki/tops.git
     ignore = dirty
+[submodule "external/benchmark"]
+	path = external/benchmark
+	url = https://github.com/google/benchmark.git
