--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "external/benchmark"]
 	path = external/benchmark
 	url = https://github.com/google/benchmark.git
+[submodule "external/gbenchmark"]
+	path = external/gbenchmark
+	url = https://github.com/google/benchmark.git
