--- a/.gitmodules
+++ b/.gitmodules
@@ -13,9 +13,7 @@
 	path = external/tops
 	url = https://github.com/ayoshiaki/tops.git
     ignore = dirty
-[submodule "external/benchmark"]
-	path = external/benchmark
-	url = https://github.com/google/benchmark.git
 [submodule "external/gbenchmark"]
 	path = external/gbenchmark
 	url = https://github.com/google/benchmark.git
+    ignore = dirty
