--- a/.gitmodules
+++ b/.gitmodules
@@ -11,7 +11,7 @@
     ignore = dirty
 [submodule "external/tops"]
 	path = external/tops
-	url = https://github.com/ayoshiaki/tops.git
+	url = https://github.com/igorbonadio/tops.git
     ignore = dirty
 [submodule "external/gbenchmark"]
 	path = external/gbenchmark
