--- a/.gitignore
+++ b/.gitignore
@@ -24,5 +24,9 @@ doc/Doxyfile.mk
 *.d
 
 # Mac OS X temp files
-#====================
+#======================
 .DS_Store
+
+# Vagrant
+#==========
+.vagrant
