Update Vagrantfile to sync the right folder

--- a/script/Vagrantfile
+++ b/script/Vagrantfile
@@ -5,13 +5,15 @@ Vagrant.configure(2) do |config|
 
   config.vm.define "trusty32", autostart: false do |trusty32|
     trusty32.vm.box = "ubuntu/trusty32"
-    config.vm.provision "shell", path: "install_deps.sh", args: "ubuntu"
+    trusty32.vm.provision "shell", path: "install_deps.sh", args: "ubuntu"
   end
 
   config.vm.define "freebsd", autostart: false do |freebsd|
     freebsd.vm.box_url = "http://iris.hosting.lv/freebsd-10.1-amd64.box"
     freebsd.vm.box = "freebsd-10.1"
-    config.vm.provision "shell", path: "install_deps.sh", args: "freebsd"
+    freebsd.vm.provision "shell", path: "install_deps.sh", args: "freebsd"
   end
+
+  config.vm.synced_folder "../", "/vagrant"
 
 end
