--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,12 @@ before_install:
 install:
   # update to gcc with C++11 support
   - sudo apt-get -qq install gcc-4.9 g++-4.9
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
-  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
-  # install boost for developers
-  - sudo apt-get install libboost1.54-all-dev
+  - sudo update-alternatives 
+         --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
+  - sudo update-alternatives 
+         --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
   # install latest LCOV (1.9 was failing)
-  - wget http://ftp.de.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
+  - wget http://ftp.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
   - tar xf lcov_1.11.orig.tar.gz
   - sudo make -C lcov-1.11/ install
   - gem install coveralls-lcov
