Generate doc on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,14 +16,17 @@ install:
 - lcov --version
 - g++ --version
 - gem install gh-push
+- sudo apt-get install doxygen
 before_script:
 - git submodule update --init --recursive
 script:
 - if [ ${COVERITY_SCAN_BRANCH} != 1 ]; then make test-coverage COV_IGNORE='*/helper/*';
   fi
 after_success:
-- if [ ${COVERITY_SCAN_BRANCH} != 1 ]; then coveralls-lcov --repo-token ThN9JAPkYk61L9an6g80s3c3QIj9ORtq3
-  coverage/test/test.info; fi
+- if [ ${COVERITY_SCAN_BRANCH} != 1 ]; then
+    coveralls-lcov --repo-token ThN9JAPkYk61L9an6g80s3c3QIj9ORtq3 coverage/test/test.info
+    make doxy
+  fi
 env:
   global:
   - secure: JaaaKGDY+6k1AutLv0S8UVrzJUjaFz8Ly25mLzjLHBeqmApFBzwp0mgkgAakQAYbprp8VKiJ/SxTEvYS+ScjYamnSzymmwBjWb5bmJSL5JgY1HkWZ9o1kt8Fpv5S237hEVN4rDl3m37n8dqe7gpTCVSaFtZNQ8/WUWp+RwddonY=
