--- a/.travis.yml
+++ b/.travis.yml
@@ -5,19 +5,23 @@ compiler:
   - clang
 
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-get -qq update
+  - if [ $TRAVIS_OS_NAME = linux ]; then
+      sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
+      sudo apt-get -qq update;
+    fi
 
 install:
-  - sudo apt-get -qq install gcc-4.9 g++-4.9
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
-  - sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90
-  - wget http://ftp.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz
-  - tar xf lcov_1.11.orig.tar.gz
-  - sudo make -C lcov-1.11/ install
-  - gem install coveralls-lcov
-  - lcov --version
-  - g++ --version
+  - if [ $TRAVIS_OS_NAME = linux ]; then
+      sudo apt-get -qq install gcc-4.9 g++-4.9;
+      sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90;
+      sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-4.9 90;
+      wget http://ftp.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz;
+      tar xf lcov_1.11.orig.tar.gz;
+      sudo make -C lcov-1.11/ install;
+      gem install coveralls-lcov;
+      lcov --version;
+      g++ --version;
+    fi
 
 before_script:
   - git submodule update --init --recursive
