--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ before_install:
   - if [ $TRAVIS_OS_NAME = linux ]; then
       sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
       sudo apt-get -qq update;
+    else
+      brew update;
     fi
 
 install:
@@ -18,10 +20,16 @@ install:
       wget http://ftp.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz;
       tar xf lcov_1.11.orig.tar.gz;
       sudo make -C lcov-1.11/ install;
-      gem install coveralls-lcov;
-      lcov --version;
-      g++ --version;
+    else
+      brew tap homebrew/versions;
+      brew install llvm --with-clang --with-asan;
+      brew install gcc49;
+      brew install lcov;
     fi
+  - gem install coveralls-lcov;
+  - g++ --version;
+  - clang++ --version;
+  - lcov --version;
 
 before_script:
   - git submodule update --init --recursive
