--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ compiler:
   - gcc
   - clang
 
+os:
+  - linux
+  - osx
+
 before_install:
   - if [ $TRAVIS_OS_NAME = linux ]; then
       sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
