Change gmock/gtest submodule urls

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,15 @@
 [submodule "make"]
-  path = make
-  url = https://github.com/renatocf/make.git
+    path = make
+    url = https://github.com/renatocf/make.git
 [submodule "external/gmock"]
-	path = external/gmock
-	url = http://git.chromium.org/external/googlemock.git
+    path = external/gmock
+    url = https://chromium.googlesource.com/external/googlemock.git
     ignore = dirty
 [submodule "external/gtest"]
-	path = external/gtest
-	url = http://git.chromium.org/external/googletest.git
+    path = external/gtest
+    url = https://chromium.googlesource.com/external/googletest.git
     ignore = dirty
 [submodule "external/gbenchmark"]
-	path = external/gbenchmark
-	url = https://github.com/google/benchmark.git
+    path = external/gbenchmark
+    url = https://github.com/google/benchmark.git
     ignore = dirty
