--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "make"]
     path = make
     url = https://github.com/renatocf/make.git
+[submodule "external/gbenchmark"]
+	path = external/gbenchmark
+	url = https://github.com/google/benchmark.git
+	ignore = dirty
