--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,7 @@
 sudo: required
 
+dist: trusty
+
 language: cpp
 
 os:
@@ -14,6 +16,7 @@ before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
       sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
       sudo add-apt-repository -y ppa:h-rayflood/llvm-upper;
+      sudo add-apt-repository -y ppa:george-edison55/cmake-3.x;
       sudo apt-get -qq update;
     elif [ "$TRAVIS_OS_NAME" = "osx" ]; then
       brew update;
@@ -22,12 +25,11 @@ before_install:
 
 install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      sudo apt-get -qq install gcc-5 g++-5;
+      sudo apt-get -qq install --allow-unauthenticated gcc-5 g++-5;
       sudo apt-get -qq install --allow-unauthenticated clang-3.6;
+      sudo apt-get -qq install --allow-unauthenticated lcov;
+      sudo apt-cache policy cmake;
       sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90;
-      wget http://ftp.debian.org/debian/pool/main/l/lcov/lcov_1.11.orig.tar.gz;
-      tar xf lcov_1.11.orig.tar.gz;
-      sudo make -C lcov-1.11/ install;
     elif [ "$TRAVIS_OS_NAME" = "osx" ]; then
       brew install gcc5;
       brew install llvm36 --with-clang;
@@ -44,6 +46,7 @@ install:
   - $CC --version;
   - $CXX --version;
   - lcov --version;
+  - cmake --version;
 
 before_script:
   - git submodule update --init --recursive
