--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ compiler:
 before_install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
       sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test;
-      sudo add-apt-repository -y ppa:h-rayflood/llvm-upper;
+      sudo add-apt-repository -y ppa:llvm-toolchain-3.8;
       sudo add-apt-repository -y ppa:george-edison55/cmake-3.x;
       sudo apt-get -qq update;
     elif [ "$TRAVIS_OS_NAME" = "osx" ]; then
@@ -25,22 +25,22 @@ before_install:
 
 install:
   - if [ "$TRAVIS_OS_NAME" = "linux" ]; then
-      sudo apt-get -qq install --allow-unauthenticated gcc-5 g++-5;
-      sudo apt-get -qq install --allow-unauthenticated clang-3.6;
+      sudo apt-get -qq install --allow-unauthenticated gcc-6 g++-6;
+      sudo apt-get -qq install --allow-unauthenticated clang-3.8;
       sudo apt-get -qq install --allow-unauthenticated lcov;
       sudo apt-cache policy cmake;
-      sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-5 90;
+      sudo update-alternatives --install /usr/bin/gcov gcov /usr/bin/gcov-6 90;
     elif [ "$TRAVIS_OS_NAME" = "osx" ]; then
-      brew install gcc5;
-      brew install llvm36 --with-clang;
+      brew install gcc6;
+      brew install llvm38 --with-clang;
       brew install lcov;
     fi
   - if [ "$CC" = "gcc" ]; then
-      export CC=gcc-5;
-      export CXX=g++-5;
+      export CC=gcc-6;
+      export CXX=g++-6;
     elif [ "$CC" = "clang" ]; then
-      export CC=clang-3.6;
-      export CXX=clang++-3.6;
+      export CC=clang-3.8;
+      export CXX=clang++-3.8;
     fi;
   - gem install coveralls-lcov;
   - $CC --version;
