Add submodule external/named_types

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,7 @@
 	path = external/probability
 	url = https://github.com/renatocf/probability.git
 	ignore = dirty
+[submodule "external/named_types"]
+	path = external/named_types
+	url = https://github.com/duckie/named_types.git
+	ignore = dirty
