normalização dos parâmetros usados pela técnica de Twinscan
Para que o valor de probabilidade não ultrapasse o valor de 1, foi realizado a normalização dos pesos dos hints, dividindo todos os pesos pelo valor do maior peso 1e6

--- a/src/myop/augustus_config.json
+++ b/src/myop/augustus_config.json
@@ -1,13 +1,13 @@
 {
-	"bonus": {
-		"start": 1,
-		"stop": 1,
-		"exon": 1,
-		"ep": 1,
-		"ass": 1,
-		"dss": 1,
-		"intron": 1
-	},
+    "bonus": {
+        "start": 1e-4,
+        "stop": 1e-4,
+        "exon": 1,
+        "ep": 1e-1,
+        "ass": 1e-4,
+        "dss": 1e-4,
+        "intron": 1
+    },
 	"punishment": {
 		"start": 1,
 		"stop": 1,
