trained statitics hints

--- a/src/myop/augustus_config.json
+++ b/src/myop/augustus_config.json
@@ -1,15 +1,16 @@
 {
-    "bonus": {
-        "start": 1e-4,
-        "stop": 1e-4,
-        "exon": 1,
-        "ep": 1e-1,
-        "ass": 1e-4,
-        "dss": 1e-4,
-        "intron": 1
-    },
-	"punishment": {
-		"start": 1,
+  "bonus": {
+    "start": 0,
+    "stop": 0,
+    "exon": 0.395444169564854,
+    "ep": 0.493982527219055,
+    "ass": 0.441767068273092,
+    "dss": 0.449799196787149,
+    "intron": 0.556577086280057,
+    "no_hints": 0.284573758159625
+  },
+  "punishment": {
+	  "start": 1,
 		"stop": 1,
 		"exon": 1,
 		"ep": 1,
