fix bug in Viterbi GHMM

--- a/src/myop/augustus_config.json
+++ b/src/myop/augustus_config.json
@@ -2,10 +2,10 @@
   "bonus": {
     "start": 0,
     "stop": 0,
-    "exon": 0.395444169564854,
-    "ep": 0.493982527219055,
-    "ass": 0.441767068273092,
-    "dss": 0.449799196787149,
+    "exon": 0.907664453832227,
+    "ep": 0.572003874896208,
+    "ass": 0.314285714285714,
+    "dss": 0.32,
     "intron": 0.556577086280057,
     "no_hints": 0.284573758159625
   },
