statistics with augustus clean hints

--- a/src/myop/augustus_config.json
+++ b/src/myop/augustus_config.json
@@ -2,20 +2,20 @@
   "bonus": {
     "start": 0,
     "stop": 0,
-    "exon": 0.907664453832227,
-    "ep": 0.572003874896208,
-    "ass": 0.314285714285714,
-    "dss": 0.32,
-    "intron": 0.298933528122717,
-    "no_hints": 0.284573758159625
+    "exon": 0.984039109039109,
+    "ep": 0.591798315413578,
+    "ass": 0.378472222222222,
+    "dss": 0.383275261324042,
+    "intron": 0.345740873299928,
+    "no_hints": 0.322035235021476
   },
   "punishment": {
-	  "start": 1,
-		"stop": 1,
-		"exon": 1,
-		"ep": 1,
-		"ass": 1,
-		"dss": 1,
-		"intron": 1
+	  "start": 0,
+		"stop": 0,
+		"exon": 0.00607419637026724,
+		"ep": 0.259145176989515,
+		"ass": 0.017269657501206,
+		"dss": 0.0211798492281919,
+		"intron": 0.131058216231718
 	}
 }
