clean hints augustus statistiscs
Statistics with cleanHintsAugustusStatistics.txt

--- a/src/myop/augustus_config.json
+++ b/src/myop/augustus_config.json
@@ -1,21 +1,21 @@
 {
-  "bonus": {
-    "start": 0,
-    "stop": 0,
-    "exon": 0.984039109039109,
-    "ep": 0.591798315413578,
-    "ass": 0.378472222222222,
-    "dss": 0.383275261324042,
-    "intron": 0.345740873299928,
-    "no_hints": 0.322035235021476
-  },
-  "punishment": {
-	  "start": 0,
+	"bonus": {
+    		"start": 0,
+    		"stop": 0,
+    		"exon": 0.984039105853279,
+    		"ep": 0.591798314265034,
+    		"ass": 0,
+    		"dss": 0,
+    		"intron": 0.345740872121414,
+    		"no_hints": 0.0508571963066398
+	},
+	"punishment": {
+		"start": 0,
 		"stop": 0,
-		"exon": 0.00607419637026724,
-		"ep": 0.259145176989515,
-		"ass": 0.017269657501206,
-		"dss": 0.0211798492281919,
-		"intron": 0.131058216231718
+		"exon": 0.00789103015557974,
+		"ep": 0.336657276394135,
+		"ass": 0,
+		"dss": 0,
+		"intron": 0.167286925751937
 	}
 }
